# framework

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COMPILE.md  COPYING  PROFILING.md  README  README.md  USAGE  copy.sh  package-lock.json  package.json
src/: CMakeLists.txt  Doxyfile  config.h.in  defs.txt.in  doxygen.h
src/amun/: CMakeLists.txt  amun.cpp  amun.h  amunclient.cpp  commandconverter.cpp  commandconverter.h  gitinforecorder.cpp  gitinforecorder.h  networkinterfacewatcher.cpp  networkinterfacewatcher.h  optionsmanager.cpp  optionsmanager.h  receiver.cpp  receiver.h
src/amun/gamecontroller/: CMakeLists.txt  externalgamecontroller.cpp  gamecontrollerconnection.cpp  gamecontrollersocket.cpp  internalgamecontroller.cpp  sslgamecontroller.cpp  sslvisiontracked.cpp  sslvisiontracked.h  strategygamecontrollermediator.cpp
src/amun/internalreferee/: CMakeLists.txt  internalreferee.cpp
src/amun/processor/: CMakeLists.txt  accelerator.cpp  accelerator.h  commandevaluator.cpp  commandevaluator.h  controller.cpp  controller.h  coordinatehelper.cpp  coordinatehelper.h  debughelper.cpp  debughelper.h  integrator.cpp  networktransceiver.cpp  networktransceiver.h  processor.cpp  processor.h  radiosystem.cpp  referee.cpp  referee.h  trackingreplay.cpp  transceiver.cpp  transceiver.h  transceiver2015.cpp  transceiver2015.h  transceiverHBC.cpp  transceiverHBC.h  transceiverlayer.h  usbdevice.cpp  usbdevice.h  usbthread.cpp  usbthread.h
src/amun/seshat/: CMakeLists.txt  backlogwriter.cpp  bufferedstatussource.cpp  combinedlogwriter.cpp  logfilefinder.cpp  logfilefinder.h  logfilehasher.cpp  logfilereader.cpp  logfilewriter.cpp  longlivingstatuscache.cpp  longlivingstatuscache.h  seqlogfilereader.cpp  seshat.cpp  timedstatussource.cpp  visionconverter.cpp  visionlogliveconverter.cpp
src/amun/simulator/: CMakeLists.txt  erroraggregator.cpp  erroraggregator.h  fastsimulator.cpp  foo.cpp  foo.hpp  mesh.cpp  mesh.h  simball.cpp  simball.h  simfield.cpp  simfield.h  simrobot.cpp  simrobot.h  simulator.cpp  simulator.h  simulator_pybind.cpp
src/amun/strategy/: CMakeLists.txt  abstractstrategyscript.cpp  abstractstrategyscript.h  compilerregistry.cpp  debughelper.cpp  filewatcher.cpp  filewatcher.h  inspectorhandler.cpp  inspectorhandler.h  inspectorholder.cpp  inspectorholder.h  inspectorserver.cpp  inspectorserver.h  internaldebugger.cpp  internaldebugger.h  js_amun.cpp  js_amun.h  js_path.cpp  js_path.h  js_protobuf.cpp  js_protobuf.h  lua.cpp  lua.h  lua_amun.cpp  lua_amun.h  lua_math.cpp  lua_math.h  lua_path.cpp  lua_path.h  lua_protobuf.cpp  lua_protobuf.h  lua_vector.cpp  lua_vector.h  math_eqn.cpp  (+13 more)
src/amuncli/: CMakeLists.txt  amuncli.cpp  amunclient.cpp  connector.cpp  connector.h
src/config/: CMakeLists.txt
src/core/: CMakeLists.txt  fieldtransform.cpp  protobuffilereader.cpp  protobuffilesaver.cpp  rng.cpp  rng.h  timer.cpp  timer.h  vector2.h
src/git/: CMakeLists.txt  gitconfig.cpp.in  gitlive.cpp
src/loganalyzer/: CMakeLists.txt  loganalyzer.cpp
src/logcuttercli/: CMakeLists.txt  logcuttercli.cpp  visionlogcutter.cpp
src/logplayer/: CMakeLists.txt  logcutter.cpp  logcutter.h  logcutter.ui  logcuttercli.cpp  logopener.cpp  logopener.h  logplayer.cpp  logprocessor.cpp  logprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  replayteamwidget.cpp  replayteamwidget.h  replayteamwidget.ui
src/loguidreader/: CMakeLists.txt  loguidreader.cpp
src/protobuf/: CMakeLists.txt  command.cpp  command.h  command.proto  debug.proto  gamestate.proto  geometry.cpp  geometry.h  grsim_commands.proto  grsim_packet.proto  grsim_replacement.proto  logfile.proto  pathfinding.proto  robot.proto  ssl_autoref.proto  ssl_game_controller_auto_ref.proto  ssl_game_controller_common.proto  ssl_game_controller_geometry.proto  ssl_game_controller_team.proto  ssl_game_event_2019.proto  ssl_gc_api.proto  ssl_gc_change.proto  ssl_gc_ci.proto  ssl_gc_engine.proto  ssl_gc_engine_config.proto  ssl_gc_state.proto  ssl_geometry.proto  ssl_mixed_team.proto  ssl_radio_protocol.proto  ssl_refbox_remotecontrol.proto  ssl_referee.cpp  ssl_referee.h  ssl_referee.proto  ssl_referee_game_event.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_custom_erforce_realism.proto  ssl_simulation_custom_erforce_robot_spec.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  (+9 more)
src/ra/: CMakeLists.txt  aboutus.cpp  aboutus.h  aboutus.ui  amunclient.cpp  amunclient.h  backlogwriter.cpp  backlogwriter.h  configdialog.cpp  configdialog.h  configdialog.ui  custompalettewidget.cpp  custompalettewidget.h  custompalettewidget.ui  debugmodel.cpp  debugmodel.h  debugtreewidget.cpp  debugtreewidget.h  fieldparameters.cpp  fieldparameters.h  fieldparameters.ui  fieldwidget.cpp  fieldwidget.h  gitinfodialog.cpp  gitinfodialog.h  gitinfodialog.ui  gitinfowidget.cpp  gitinfowidget.h  gitinfowidget.ui  guitimer.cpp  inputwidget.cpp  inputwidget.h  inputwidget.ui  internalreferee.cpp  internalreferee.h  logfileselectiondialog.cpp  logfileselectiondialog.h  logfileselectiondialog.ui  loggingsuite.cpp  loggingsuite.h  (+65 more)
src/replaycli/: CMakeLists.txt  replaycli.cpp  replaytestrunner.cpp  replaytestrunner.h  timingstatistics.cpp  timingstatistics.h
src/simulator/: CMakeLists.txt  simulator.cpp  ssl_robocup_server.cpp  ssl_robocup_server.h
src/tests/: CMakeLists.txt  util.h
src/timeline/: CMakeLists.txt  timelinereader.cpp  timelinewriter.cpp
src/trackingreplaycli/: trackingreplaycli.cpp
src/trajectorycli/: CMakeLists.txt  alphatimetrajectoryoptimizer.cpp  collisiontest.cpp  common.cpp  common.h  endinobstacleoptimizer.cpp  endinobstacleoptimizer.h  standardsampleroptimizer.cpp  standardsampleroptimizer.h  trajectorycli.cpp  trajectorytiming.cpp
src/underbots_simulator/: CMakeLists.txt  main.cpp  simulator.cpp  simulator.hpp
src/visionanalyzer/: CMakeLists.txt  miniprocessor.cpp  miniprocessor.h  visionanalyzer.cpp  visionextractor.cpp  visionlogreader.cpp  visionlogreader.h
src/visionlog/: CMakeLists.txt  visionlogheader.h  visionlogreader.cpp  visionlogwriter.cpp
(+635 files in other folders)
